Fixed the visibility issue Everything now behaves as it should even though I don't really like the solution...

--- a/tests/screen.scss
+++ b/tests/screen.scss
@@ -12,7 +12,7 @@
 	.session-list {
 		.session-each {
 			.session-detail {
-				display: none;
+				// display: none;
 			}
 		}
 	}
